<resources>
    <string name="app_name">Besane Md</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="besane_md">Besane Md</string>
    <string name="_2020_copyright_inspire_solution">© 2020 Copyright: Inspire Solution</string>
    <string name="caring_for_the_future">Caring for the future</string>
    <string name="login">Login</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="password">Password</string>
    <string name="or">OR</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="how_many_people_do_you_live_with">How Many People Do You Live With?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Don\'t have an account ?</string>
    <string name="gender">Gender</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_home">Home</string>
    <string name="action_tips">Tips</string>
    <string name="profile">Profile</string>
    <string name="health_details">Health Details</string>
</resources>