<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditProfileActivity">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:scrollbars="vertical"
        android:paddingBottom="16dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:background="@color/colorBackground">


        <ImageView
            android:id="@+id/imageView24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleX="1.1"
            android:scaleY="1.1"
            android:backgroundTint="@color/colorPrimaryDark"
            android:background="@drawable/background_profile_top"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="40dp"
            android:elevation="10dp"
            android:background="@drawable/back_white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="20dp" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView24"
            app:layout_constraintVertical_bias="0.0">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="90dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image_view_user"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:src="@drawable/photo_user"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <ImageView
                    android:id="@+id/btnAddNew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/add_icon"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.797"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/image_view_user"
                    app:layout_constraintVertical_bias="1.0" />

            </androidx.constraintlayout.widget.ConstraintLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingVertical="8dp">

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/name_icon"
                    android:drawableLeft="@drawable/name_icon"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:fontFamily="@font/sen_regular"
                    android:hint="@string/first_name"
                    android:inputType="textPersonName"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:drawableStart="@drawable/name_icon"
                    android:drawableLeft="@drawable/name_icon"
                    android:drawablePadding="8dp"
                    android:ems="10"
                    android:fontFamily="@font/sen_regular"

                    android:hint="@string/last_name"
                    android:inputType="textPersonName"
                    android:paddingBottom="16dp"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/email_icon"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:paddingBottom="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/phone_icon"
                android:drawableLeft="@drawable/phone_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:paddingBottom="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/location_icon" />

                    <Spinner
                        android:id="@+id/spinnerCity"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/location_icon" />

                    <Spinner
                        android:id="@+id/spinnerCountry"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:layout_weight="1" />

                </LinearLayout>

            </LinearLayout>

            <EditText
                android:id="@+id/editTextDateOfBirth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/date_icon"
                android:drawableLeft="@drawable/date_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/date_of_birth"
                android:paddingBottom="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                android:drawableStart="@drawable/gender_icon"
                android:drawableLeft="@drawable/gender_icon"
                android:drawablePadding="8dp"
                android:ems="10"
                android:fontFamily="@font/sen_regular"
                android:paddingBottom="16dp"
                android:text="@string/gender"
                android:textColor="@color/grey"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/maleSelected"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@drawable/gender_selected"
                    android:textColor="@android:color/white"                android:enabled="true"
                    android:focusable="true"
                    android:layout_weight="1"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center"
                    android:saveEnabled="true"
                    android:text="Male"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/femaleSelected"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/gender_selector"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center"
                    android:text="Female"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/no_of_child"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:drawableStart="@drawable/child_icon"
                android:drawableLeft="@drawable/child_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sen_regular"
                android:paddingBottom="16dp"
                android:text="@string/how_many_people_do_you_live_with"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/gender_shape_unselected"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="-"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="2"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginHorizontal="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/sen_regular"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="+"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp" />

            </LinearLayout>

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/password_icon"
                android:drawableLeft="@drawable/password_icon"
                android:drawableEnd="@drawable/feather_eye_icon"
                android:drawableRight="@drawable/feather_eye_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/editTextPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:drawableStart="@drawable/password_icon"
                android:drawableLeft="@drawable/password_icon"
                android:drawableEnd="@drawable/feather_eye_icon"
                android:drawableRight="@drawable/feather_eye_icon"
                android:drawablePadding="8dp"
                android:fontFamily="@font/sen_regular"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                android:paddingBottom="16dp"
                android:textColor="@color/colorBlack"
                android:textSize="14sp" />


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>